--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,40 +1,49 @@
 {
-    "extends": "eslint:recommended",
-    "parserOptions": {
-      "ecmaVersion": 6,
-      "ecmaFeatures": {
-        "impliedStrict": true
+  "extends": "eslint:recommended",
+  "parserOptions": {
+    "ecmaVersion": 8
+  },
+  "env": {
+    "es6": true,
+    "jest": true,
+    "node": true
+  },
+  "rules": {
+    "eol-last": "error",
+    "eqeqeq": [
+      "error",
+      "always"
+    ],
+    "indent": [
+      "error",
+      2
+    ],
+    "new-cap": "warn",
+    "no-console": "off",
+    "no-multi-spaces": [
+      "warn",
+      {
+        "exceptions": {
+          "VariableDeclarator": true
+        }
       }
-    },
-    "env": {
-      "browser": true,
-      "es6": true,
-      "node": true
-    },
-    "rules": {
-      "no-var": "error",
-      "eqeqeq": ["error", "always"],
-      "no-console": "off",
-      "no-undefined": "off",
-      "indent": ["error", 2],
-      "quotes": ["warn", "single"],
-      "no-multi-spaces": [
-        "warn",
-        {
-          "exceptions": {
-            "VariableDeclarator": true
-          }
-        }
-      ],
-      "no-trailing-spaces": "warn",
-      "new-cap": "warn",
-      "no-redeclare": [
-        "error",
-        {
-          "builtinGlobals": true
-        }
-      ],
-      "semi": [2, "always"],
-      "eol-last": "error"
-    }
+    ],
+    "no-redeclare": [
+      "error",
+      {
+        "builtinGlobals": true
+      }
+    ],
+    "no-template-curly-in-string": "error",
+    "no-trailing-spaces": "warn",
+    "no-undefined": "off",
+    "quotes": [
+      "warn",
+      "single",
+      {
+        "allowTemplateLiterals": true
+      }
+    ],
+    "semi": "error"
   }
+}
